namespace FakePerson.Lib.Models.Names;

public record SimpleName : AbstractName
{ }