namespace FakePerson.Lib.Models.Phones;

public record SimplePhone : AbstractPhone {}